--- a/package.json
+++ b/package.json
@@ -61,11 +61,10 @@
     "source-map-js": "^1.0.2",
     "reusify": "^1.0.4"
   },
-  "scripts": {
-    "build": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
-  },
+  "scripts": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": ""
 }
+
