--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "version": "1.0.0",
   "main": "tailwind.config.js",
   "scripts": {
-    "build": "tailwindcss build -o tailwind.css"
+    "build": "tailwindcss build --output dist"
   },
   "keywords": [],
   "author": "",
